--- a/src/index.css
+++ b/src/index.css
@@ -1,36 +1,12 @@
 @import "tailwindcss";
 
-@keyframes scroll {
-    0% {
-      transform: translateX(0%);
-    }
-    100% {
-      transform: translateX(-50%);
-    }
-  }
-  
-  .animate-scroll {
-    animation: scroll 120s linear infinite;
-    width: max-content;
-  }
-  
-  .animate-scroll.paused {
-    animation-play-state: paused;
-  }
-  
+/* Tailwind config */
+@theme {
+    --color-primary: oklch(38.6% 0.063 188.416);
+    --font-primary: 'Rubik', sans-serif;
+}
 
-  @keyframes slideDown {
-    0% {
-      opacity: 0;
-      transform: translateY(-10px);
-    }
-    100% {
-      opacity: 1;
-      transform: translateY(0);
-    }
-  }
-  
-  .animate-slideDown {
-    animation: slideDown 0.3s ease-out;
-  }
-  
+/* Button */
+.btn-primary {
+    @apply bg-primary text-white rounded px-5 py-3 flex items-center justify-center gap-2;
+}
