--- a/src/app/layout/navbar/navbar.html
+++ b/src/app/layout/navbar/navbar.html
@@ -1,14 +1,45 @@
-<div class="navbar">
-    <div class="navbar-primary container">
-        <a routerLink="/" class="logo-container">
-            <img src="/images/logo.png" class="logo" />
+<div class="h-8 bg-primary">
+    <div class="container mx-auto flex items-center justify-between h-full px-4 md:px-0">
+        
+        <div class="flex items-center">
+            <span class="text-white text-xs">
+                <i class="fas fa-envelope"></i>
+                <a href="mailto:csediualumni.official@gmail.com" class="hover:underline">
+                    csediualumni.official&commat;gmail.com
+                </a>
+            </span>
+        </div>
+
+        <div class="flex items-center">
+            <a
+                routerLink="/portal"
+                target="_blank"
+                class="flex items-center text-white text-xs hover:underline gap-2"
+            >
+                <i class="fas fa-user"></i>
+                <span>Member Portal</span>
+            </a>
+        </div>
+    </div>
+</div>
+
+<div class="h-20 shadow-lg border-b border-gray-200">
+    <div class="container mx-auto flex items-center justify-between h-full px-4 md:px-0">
+        <a routerLink="/" class="">
+            <img src="/images/logo.png" class="h-16" />
         </a>
 
-        <ul class="navbar-links">
-                <li><a routerLink="/membership">Membership</a></li>
-                <li><a routerLink="/about">About</a></li>
-                <li><a routerLink="/events">Events</a></li>
-                <li><a routerLink="/contact">Contact</a></li>
-            </ul>
+        <ul class="flex items-center h-full">
+            @for (link of linksRequest.value(); track link.url) {
+                <li class="h-full">
+                    <a
+                        [routerLink]="link.url"
+                        routerLinkActive="text-primary border-primary"
+                        [routerLinkActiveOptions]="{ exact: true }"
+                        class="h-full flex items-center justify-center px-2 md:px-4 py-2 hover:text-primary border-b-2 border-transparent hover:border-primary transition-colors"
+                    >{{ link.label }}</a>
+                </li>
+            }
+        </ul>
     </div>
 </div>
