--- a/src/app/layout/navbar/navbar.html
+++ b/src/app/layout/navbar/navbar.html
@@ -23,7 +23,7 @@
     </div>
 </div>
 
-<div class="h-20 shadow-lg border-b border-gray-200">
+<div class="h-20 shadow-lg border-b border-gray-200 bg-white">
     <div class="container mx-auto flex items-center justify-between h-full px-4 md:px-0">
         <a routerLink="/" class="">
             <img src="/images/logo.png" class="h-16" />
