--- a/src/app/pages/portal/portal.html
+++ b/src/app/pages/portal/portal.html
@@ -35,12 +35,12 @@
         </nav>
     </aside>
     <main class="content" role="main">
-        <header>
+        <!-- <header>
             <div>
                 <h1>{{ selected()?.title || 'Alumni Portal' }}</h1>
                 <p>{{ selected()?.description || 'Welcome to the Alumni Portal' }}</p>
             </div>
-        </header>
+        </header> -->
 
         <div class="content-area">
             <router-outlet />
