--- a/src/app/pages/portal/portal.html
+++ b/src/app/pages/portal/portal.html
@@ -37,8 +37,8 @@
     <main class="content" role="main">
         <!-- <header>
             <div>
-                <h1>{{ selected()?.title || 'Alumni Portal' }}</h1>
-                <p>{{ selected()?.description || 'Welcome to the Alumni Portal' }}</p>
+                <h1>{{ selected().title || 'Alumni Portal' }}</h1>
+                <p>{{ selected().description || 'Welcome to the Alumni Portal' }}</p>
             </div>
         </header> -->
 
