--- a/src/app/pages/blogs/blog-details/blog-details.scss
+++ b/src/app/pages/blogs/blog-details/blog-details.scss
@@ -155,7 +155,7 @@
           font-size: 1.5rem;
           font-weight: 700;
           margin: 2rem 0 1rem;
-          color: $primary-color;
+          color: var(--color-primary);
         }
 
         p {
@@ -172,7 +172,7 @@
         }
 
         blockquote {
-          border-left: 4px solid $primary-color;
+          border-left: 4px solid var(--color-primary);
           padding: 1rem 1.5rem;
           margin: 2rem 0;
           background: #f8fafc;
@@ -197,7 +197,7 @@
           font-size: 1.1rem;
           font-weight: 700;
           margin-bottom: 1rem;
-          color: $primary-color;
+          color: var(--color-primary);
         }
       }
 
@@ -256,7 +256,7 @@
               transition: color 0.3s ease;
 
               &:hover {
-                color: $primary-color;
+                color: var(--color-primary);
               }
             }
           }
@@ -281,7 +281,7 @@
     font-weight: 700;
     text-align: center;
     margin-bottom: 3rem;
-    color: $primary-color;
+    color: var(--color-primary);
   }
 
   .articles-grid {
