--- a/src/app/pages/blogs/blogs/blogs.scss
+++ b/src/app/pages/blogs/blogs/blogs.scss
@@ -48,7 +48,7 @@
     font-weight: 700;
     text-align: center;
     margin-bottom: 3rem;
-    color: $primary-color;
+    color: var(--color-primary);
   }
 
   .featured-blog {
@@ -125,7 +125,7 @@
 
         .author {
           font-weight: 600;
-          color: $primary-color;
+          color: var(--color-primary);
         }
       }
 
@@ -180,7 +180,7 @@
     .section-title {
       font-size: 2.5rem;
       font-weight: 700;
-      color: $primary-color;
+      color: var(--color-primary);
       margin: 0;
     }
 
@@ -286,7 +286,7 @@
 
           .author {
             font-weight: 600;
-            color: $primary-color;
+            color: var(--color-primary);
           }
         }
 
@@ -312,7 +312,7 @@
 
           .tag {
             background: rgba(102, 126, 234, 0.1);
-            color: $primary-color;
+            color: var(--color-primary);
             padding: 0.2rem 0.6rem;
             border-radius: 15px;
             font-size: 0.7rem;
